crud operation on post

--- a/static/css/login_register.css
+++ b/static/css/login_register.css
@@ -94,8 +94,7 @@
     left: 0;
     background-size: cover;
     background-position: 50% 50%;
-    /* background-image: url('https://plus.unsplash.com/premium_photo-1684581214880-2043e5bc8b8b?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8YmxvZyUyMGNvdmVyfGVufDB8fDB8fHww'); */
-    background-repeat:repeat;
+    background-image: url('https://plus.unsplash.com/premium_photo-1684581214880-2043e5bc8b8b?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8YmxvZyUyMGNvdmVyfGVufDB8fDB8fHww');
   }
 
 .panel-heading a{
