--- a/templates/blog/update.html
+++ b/templates/blog/update.html
@@ -15,15 +15,15 @@
                     <div class="row">
                     <div class="col-lg-12">
                         
-                        <form action="{% url 'create_blog' %}" method="post" enctype="multipart/form-data" style="display: block;">
+                        <form action="{% url 'update_post' post.id %}" method="post" enctype="multipart/form-data" style="display: block;">
                             {% csrf_token %}
                         <div class="form-group">
                             <label for="">Title</label>
-                            <input type="text" name="title" id="title" tabindex="1" class="form-control" placeholder="title" value="" required>
+                            <input type="text" name="title" id="title" tabindex="1" class="form-control" placeholder="title" value="{{ post.title }}" required>
                         </div>
                         <div class="form-group">
                             <label for="">Content</label>
-                            <textarea class="form-control" name="content" id="content" rows="5" required></textarea>
+                            <textarea class="form-control" name="content" id="content" rows="5" required>{{ post.content }}</textarea>
                         </div>
                         <div class="form-group">
                             <label for="">Image</label>
@@ -32,7 +32,7 @@
                         <div class="form-group">
                             <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
-                                <button type="submit" class="btn btn-dark">Create</button>
+                                <button type="submit" class="btn btn-dark">Update</button>
                             </div>
                             </div>
                         </div>
