--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,5 +1,5 @@
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <h2><i class="fa-solid fa-blog fa-beat-fade" style="color: #080808;"></i></h2>
+        <h2 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"><i class="fa-solid fa-blog fa-beat-fade" style="color: #080808;"></i> Blogs</h2>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
                 <a class="dropdown-item" href="{% url 'create_blog' %}">Create Blogs</a>
                 <a class="dropdown-item" href="{% url 'my_blogs'  %}">My Blogs</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">All Blogs</a>
+                <a class="dropdown-item" href="{% url 'all_blogs' %}">All Blogs</a>
                 </div>
             </li>
             </ul>
