created like and comment functionality for the post

--- a/static/css/login_register.css
+++ b/static/css/login_register.css
@@ -117,3 +117,10 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+
+/* Single-line truncation for post excerpts */
+.single-line {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
