--- a/templates/blog/read.html
+++ b/templates/blog/read.html
@@ -11,7 +11,14 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    <h4>{{ post.title }}</h4>
+                    <h4 class="text-center">{{ post.title }}</h4>
+                    <h6 class="text-right">No of Likes <span id="like-count">{{ post.likes }}</span>  <span id="like-btn" style="cursor:pointer;">
+                        {% if liked %}
+                            <i class="fa-sharp fa-solid fa-heart" style="color: #f90133;"></i>
+                        {% else %}
+                            <i class="fa-sharp fa-regular fa-heart" style="color: #f90133;"></i>
+                        {% endif %}
+                    </span></h6>
                 </div>
                 <div class="card-body">
                     {% if post.image %}
@@ -20,16 +27,68 @@
                         <img src="{% static 'image/python.png' %}" class="img-fluid mb-3" alt="Default Image">
                     {% endif %}
                     <p>{{ post.content }}</p>
-                    <p><strong>Author:</strong> {{ post.author }}</p>
-                    <p><strong>Created On:</strong> {{ post.created_at }}</p>
+                    <p class="text-right"><strong>Author:</strong> {{ post.author }}</p>
+                    <p class="text-right"><strong>Created On:</strong> {{ post.created_at }}</p>
                 </div>
             </div>
             <br><br>
-            <h4>Comments : <i class="fa-solid fa-comment"></i></h4>
-            <h4>Like : <i class="fa-sharp fa-regular fa-heart" style="color: #f90133;"></i></h4>
-            <h4>Ratings : <i class="fa-regular fa-star" style="color: #FFD43B;"></i><i class="fa-regular fa-star" style="color: #FFD43B;"></i><i class="fa-regular fa-star" style="color: #FFD43B;"></i><i class="fa-regular fa-star" style="color: #FFD43B;"></i><i class="fa-regular fa-star" style="color: #FFD43B;"></i></h4>
+            <form action="{% url 'add_comment' post.id %}" method="post">
+                {% csrf_token %}
+                <div class="comments">
+                <h4 id="comments">Comments : <i class="fa-solid fa-comment"></i></h4>
+                <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Enter your comment here..."></textarea>
+                <button type="submit" class="btn btn-dark mt-2">Submit</button>
+               </div>
+            </form>
+            <br>
         </div>
     </div>
 </div>
 <br><br>
+
+<script>
+// get CSRF token from cookie
+function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+
+const likeBtn = document.getElementById('like-btn');
+const likeCountEl = document.getElementById('like-count');
+const toggleUrl = "{% url 'toggle_like' post.id %}";
+const csrftoken = getCookie('csrftoken');
+
+likeBtn && likeBtn.addEventListener('click', function() {
+    fetch(toggleUrl, {
+        method: 'POST',
+        headers: {
+            'X-CSRFToken': csrftoken,
+            'Accept': 'application/json',
+        },
+        credentials: 'same-origin',
+    })
+    .then(res => res.json())
+    .then(data => {
+        if (data.error) return;
+        // update icon
+        if (data.liked) {
+            likeBtn.innerHTML = '<i class="fa-sharp fa-solid fa-heart" style="color: #f90133;"></i>';
+        } else {
+            likeBtn.innerHTML = '<i class="fa-sharp fa-regular fa-heart" style="color: #f90133;"></i>';
+        }
+        likeCountEl.textContent = data.likes_count;
+    })
+    .catch(err => console.error(err));
+});
+</script>
 {% endblock%}
